--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "A pinterest clone for the fcc fullstack challenges",
   "main": "index.js",
   "scripts": {
-    "start": "node build/server/backend.js"
+    "start": "node build/server/backend.js",
+    "start:dev": "concurrently \"npm run start:mongodb\"  \"npm run start:client\" \"npm run start:server\"",
+    "start:client": "nodemon --watch webpack.config.js --watch config --exec \"webpack-dev-server --env development\"",
+    "start:server": "nodemon --watch app --watch server.js --watch models --exec \"webpack --env development&& npm start\"",
+    "start:mongodb": "node config/startdb.js",
+    "build:client": "webpack --env production",
+    "build:server": "webpack --env production",
+    "build": "npm run build:client && npm run build:server",
+    "postinstall": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -17,5 +25,40 @@
     "fullstack"
   ],
   "author": "azurite",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "autoprefixer": "^6.7.7",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-css-modules-transform": "^1.2.7",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.16",
+    "concurrently": "^3.4.0",
+    "connect-logger": "0.0.1",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.0",
+    "cssnano": "^3.10.0",
+    "dotenv": "^4.0.0",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^6.10.3",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "html-webpack-plugin": "^2.28.0",
+    "nodemon": "^1.11.0",
+    "npm-install-webpack-plugin": "^4.0.4",
+    "optimize-css-assets-webpack-plugin": "^1.3.0",
+    "postcss-loader": "^1.3.3",
+    "pug-loader": "^2.3.0",
+    "purifycss-webpack": "^0.6.0",
+    "react-hot-loader": "^1.3.1",
+    "redux-immutable-state-invariant": "^2.0.0",
+    "source-map-support": "^0.4.14",
+    "stats-webpack-plugin": "^0.6.0",
+    "style-loader": "^0.16.1",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.3.3",
+    "webpack-dev-server": "^2.4.2",
+    "webpack-merge": "^4.1.0"
+  }
 }
