--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^6.10.3",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "nodemon": "^1.11.0",
@@ -51,7 +51,7 @@
     "postcss-loader": "^1.3.3",
     "pug-loader": "^2.3.0",
     "purifycss-webpack": "^0.6.0",
-    "react-hot-loader": "^1.3.1",
+    "react-hot-loader": "^3.0.0-beta.6",
     "redux-immutable-state-invariant": "^2.0.0",
     "source-map-support": "^0.4.14",
     "stats-webpack-plugin": "^0.6.0",
@@ -60,5 +60,18 @@
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2",
     "webpack-merge": "^4.1.0"
+  },
+  "dependencies": {
+    "axios": "^0.16.1",
+    "express": "^4.15.2",
+    "pug": "^2.0.0-beta11",
+    "react": "^15.5.4",
+    "react-bootstrap": "^0.30.8",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
+    "react-router": "^4.1.1",
+    "react-router-bootstrap": "^0.23.1",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   }
 }
