--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "npm-install-webpack-plugin": "^4.0.4",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "postcss-loader": "^1.3.3",
+    "prop-types": "^15.5.8",
     "pug-loader": "^2.3.0",
     "purifycss-webpack": "^0.6.0",
     "react-hot-loader": "^3.0.0-beta.6",
@@ -64,6 +65,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "express": "^4.15.2",
+    "history": "^4.6.1",
     "pug": "^2.0.0-beta11",
     "react": "^15.5.4",
     "react-bootstrap": "^0.30.8",
@@ -71,6 +73,7 @@
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-bootstrap": "^0.23.1",
+    "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   }
