--- a/package.json
+++ b/package.json
@@ -67,6 +67,11 @@
     "axios": "^0.16.1",
     "express": "^4.15.2",
     "history": "^4.6.1",
+    "mongoose": "^4.9.5",
+    "passport": "^0.3.2",
+    "passport-github": "^1.1.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "pug": "^2.0.0-beta11",
     "react": "^15.5.4",
     "react-bootstrap": "^0.30.8",
