--- a/package.json
+++ b/package.json
@@ -65,7 +65,10 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "body-parser": "^1.17.1",
+    "connect-mongo": "^1.3.2",
     "express": "^4.15.2",
+    "express-session": "^1.15.2",
     "history": "^4.6.1",
     "mongoose": "^4.9.5",
     "passport": "^0.3.2",
@@ -81,6 +84,8 @@
     "react-router-bootstrap": "^0.23.1",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "scmp": "^2.0.0",
+    "semver": "^5.3.0"
   }
 }
