--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "express": "^4.15.2",
     "express-session": "^1.15.2",
     "history": "^4.6.1",
+    "joi": "^10.4.1",
     "mongoose": "^4.9.5",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
