--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react": "^15.5.4",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.5.4",
+    "react-masonry-component": "^5.0.5",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-bootstrap": "^0.23.1",
