add favicon middleware and improve small things

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "scmp": "^2.0.0",
-    "semver": "^5.3.0"
+    "semver": "^5.3.0",
+    "serve-favicon": "^2.4.2"
   }
 }
